@@ -1,3 +1,0 @@
-SSH_AUTH_SOCK=/tmp/ssh-fAVMlV7181/agent.7181; export SSH_AUTH_SOCK;
-SSH_AGENT_PID=7182; export SSH_AGENT_PID;
-echo Agent pid 7182;
